--- a/04 Portfoilo-for-Digilal_marketer/style.css
+++ b/04 Portfoilo-for-Digilal_marketer/style.css
@@ -45,14 +45,19 @@ header > nav >.menu-icon{
 header > nav > .menu > ul > li{
     font-size: 1.3rem;
 }
+header > nav > .menu > ul > li:hover{
+    color:#F58650; 
+    cursor: pointer;
 
+
+}
 
 /* ====================== PAGE 1 ========================== */
 
 .page1{
     width: 100vw;
     height: 80%;
-    background-color: yellow;
+    /* background-color: yellow; */
    
    
 }
@@ -119,4 +124,42 @@ header > nav > .menu > ul > li{
     color: white;
     font-size: 1.2rem;
    margin-top: 3%;
+}
+
+
+/* ================================ PAGE 3============================= */
+
+.page3{
+    width: 100vw;
+}
+.page3 > .page3-wrapper{
+    display: flex;
+    gap: 3.5%;
+    justify-content: center;
+    margin: 2% 0;
+}
+.page3 > .page3-wrapper > .card{
+    width: 17rem;
+    height: 14rem;
+    background-color:#1b1a1a;
+    text-align: center;
+    color: white;
+
+}
+
+.page3 > .page3-wrapper > .card > .img, .card > .numb , .card > .para{
+      margin: 2.5%;
+      /* font-size: 5rem; */
+
+}
+.page3 > .page3-wrapper > .card > .img{
+
+    font-size: 6rem;
+}
+.page3 > .page3-wrapper > .card > .numb > h2{
+    font-size: 2.5rem;
+    font-weight: 400;
+}
+.page3 > .page3-wrapper > .card > .para > p{
+    font-size: 2rem;
 }
