--- a/04 Portfoilo-for-Digilal_marketer/style.css
+++ b/04 Portfoilo-for-Digilal_marketer/style.css
@@ -163,3 +163,53 @@ header > nav > .menu > ul > li:hover{
 .page3 > .page3-wrapper > .card > .para > p{
     font-size: 2rem;
 }
+
+
+/* ========================= PAGE 4 ======================== */
+
+.page4{
+    width: 100vw;
+    display: flex;
+    justify-content: center;
+
+}
+.page4 >.page4-wrapper{
+    background-color: yellow;
+    width: 70%;
+    position: relative;
+    
+
+
+
+}
+.page4 >.page4-wrapper > .video {
+   
+
+}
+.page4 >.page4-wrapper > .video > .fillter{
+    position: absolute;
+    background-color:transparent;
+    width: 100%;
+    height: 100%;
+    /* z-index: 5; */
+    top: 0;
+    background: rgba( 14, 14, 14, 0.25 );
+box-shadow: 0 8px 32px 0 rgba( 31, 38, 135, 0.37 );
+backdrop-filter: blur( 2px );
+-webkit-backdrop-filter: blur( 2px );
+border-radius: 10px;
+border: 1px solid rgba( 255, 255, 255, 0.18 );
+
+}
+.page4 >.page4-wrapper > .video > img{
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    object-position: center;
+}
+
+.page4 >.page4-wrapper > .video{
+    
+
+
+}
