--- a/04 Portfoilo-for-Digilal_marketer/style.css
+++ b/04 Portfoilo-for-Digilal_marketer/style.css
@@ -183,6 +183,8 @@ header > nav > .menu > ul > li:hover{
 
 }
 .page4 >.page4-wrapper > .video {
+    width: 100%;
+    height: 35vh;
    
 
 }
@@ -206,10 +208,4 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
     height: 100%;
     object-fit: cover;
     object-position: center;
-}
-
-.page4 >.page4-wrapper > .video{
-    
-
-
 }
