--- a/04 Portfoilo-for-Digilal_marketer/style.css
+++ b/04 Portfoilo-for-Digilal_marketer/style.css
@@ -144,6 +144,7 @@ header > nav > .menu > ul > li:hover{
     background-color:#1b1a1a;
     text-align: center;
     color: white;
+    box-shadow: rgba(134, 129, 129, 0.35) 0px 5px 15px;
 
 }
 
