--- a/04 Portfoilo-for-Digilal_marketer/media.css
+++ b/04 Portfoilo-for-Digilal_marketer/media.css
@@ -58,6 +58,57 @@
    margin-top: 3%;
 }
 
+/* ========================== PAGE 3 =================== */
+
+.page3 > .page3-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
+
+}
+.page3 > .page3-wrapper > .card{
+    width: 17rem;
+    height: 14rem;
+    background-color:#1b1a1a;
+    text-align: center;
+    color: white;
+    margin-top: 2rem;
+    
+
+}
+
+.page3 > .page3-wrapper > .card > .img, .card > .numb , .card > .para{
+      margin: 2.5%;
+      /* font-size: 5rem; */
+
+}
+.page3 > .page3-wrapper > .card > .img{
+
+    font-size: 6rem;
+}
+.page3 > .page3-wrapper > .card > .numb > h2{
+    font-size: 2.5rem;
+    font-weight: 400;
+}
+.page3 > .page3-wrapper > .card > .para > p{
+    font-size: 2rem;
+}
+/* ========================== PAGE 4 =================== */
+ .page4 > .page4-wrapper{
+    width: 100%;
+    margin: 0;
+ }
+
+ /* ========================= page 5 ============ */
+ .page5 > .page5-wrapper{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    text-align: center;
+    
+ }
+
 }
 
 
@@ -131,6 +182,19 @@
         color: white;
         font-size: 1.2rem;
        margin-top: 3%;
+    }
+
+    /* ===================== page 3 ================= */
+    page3 > .page3-wrapper > .card > .img{
+
+        font-size: 6rem;
+    }
+    .page3 > .page3-wrapper > .card > .numb > h2{
+        font-size: 2rem;
+        font-weight: 400;
+    }
+    .page3 > .page3-wrapper > .card > .para > p{
+        font-size: 1.3rem;
     }
 
 }
