fix portfolio bugs

--- a/04 Portfoilo-for-Digilal_marketer/style.css
+++ b/04 Portfoilo-for-Digilal_marketer/style.css
@@ -276,9 +276,7 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
  }
  
  .page6 >.page6-wrapper > .our-portfolio{
-    object-fit:contain;
     overflow: hidden;
-    object-fit: cover;
     border-radius: 1rem;
        
  }
@@ -286,9 +284,9 @@ border: 1px solid rgba( 255, 255, 255, 0.18 );
  .page6-wrapper >  .our-portfoli >  img{
     width: 100%;
     height: 100%;
-    /* object-fit: cover;
+    object-fit: cover;
     object-position: center;
-    overflow: hidden; */
+    overflow: hidden;
     
  }
  .page6 > .our-portfoli-head > h2{
