--- a/06Health-Fitness/style.css
+++ b/06Health-Fitness/style.css
@@ -115,7 +115,7 @@ nav .sign-in a{
     width: 450px;
 }
 
-/* ---------------------------------------------- */
+/* -------------------- PAGE 2   -------------------------- */
 
 
 
